--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
 sudo: required
-before_install:
-- sudo apt-get update -qq
-- sudo apt-get install -qq pbuilder
 script:
-#- sudo pbuilder create
-- sudo pbuilder create --distribution trusty --debootstrapopts --variant=buildd
+- make
